# thanatosmfrac-cgol

./: .gitignore  Cargo.toml
src/: canonical.rs  conway.rs  lib.rs  main.rs  startup.rs  thanatos_core.rs
src/mfrac/: pipeline.rs
src/types/: mod.rs  simulation_feed.rs  simulation_payload.rs
src/ui/: app.rs
src/utilities/: bit_packing.rs  mod.rs
